[gd_scene load_steps=7 format=3 uid="uid://dhqnm1mlu87hb"]

[ext_resource type="Script" uid="uid://dh4urbplenrq4" path="res://scenes/main.gd" id="1_tipki"]
[ext_resource type="PackedScene" uid="uid://58qcxcen42d7" path="res://scenes/game_container.tscn" id="2_jyhfs"]
[ext_resource type="AudioStream" uid="uid://cjbocmk41st8n" path="res://audio/Serendipity_20Daybreak_20ext_20v2.1.2.1.mp3" id="4_tbgi4"]
[ext_resource type="AudioStream" uid="uid://da2bw7mgebbdi" path="res://audio/filler1.mp3" id="5_tefeu"]
[ext_resource type="PackedScene" uid="uid://dax0hhxr4xyjj" path="res://ui/menu.tscn" id="11_ya4ey"]

[sub_resource type="AudioStreamPlaylist" id="AudioStreamPlaylist_o6xl0"]
shuffle = true
fade_time = 1.0
stream_count = 2
stream_0 = ExtResource("4_tbgi4")
stream_1 = ExtResource("5_tefeu")

[node name="Main" type="Node2D"]
process_mode = 3
script = ExtResource("1_tipki")

[node name="GameScene" parent="." instance=ExtResource("2_jyhfs")]
visible = false

[node name="GameMenu" parent="." instance=ExtResource("11_ya4ey")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="MusicAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamPlaylist_o6xl0")
autoplay = true
bus = &"Music"

[connection signal="exit_game" from="GameMenu" to="." method="_on_game_menu_exit_game"]
[connection signal="restart_game" from="GameMenu" to="GameScene" method="_on_restart"]
[connection signal="return_main_menu" from="GameMenu" to="." method="_on_game_menu_return_main_menu"]
[connection signal="start_game" from="GameMenu" to="." method="_on_game_menu_start_game"]
